@@ -5,6 +5,7 @@
 **/.gitignore
 **/.gitkeep
 bootstrap/cache/*
+database/*.sqlite
 .env
 CODE_OF_CONDUCT.md
 CONTRIBUTING.md
@@ -12,14 +13,14 @@ docker-compose.yml
 Dockerfile
 .dockerignore
 docs/
-Homestead.json
-Homestead.yaml
+fortrabbit.yml
+Homestead.*
 node_modules/
 npm-debug.log*
 persist/
 phpunit*
 Procfile
-public/storage/
+public/storage
 resources/vendor/
 results/
 .sass-lint.yml
@@ -34,6 +35,12 @@ storage/framework/sessions/*
 storage/framework/views/*
 storage/logs/*
 .styleci.yml
+storage/app/public/*
+storage/debugbar/*
+storage/framework/cache/*
+storage/framework/sessions/*
+storage/framework/views/*
+storage/logs/*
 tests/
 .travis.yml*
 vendor/
