@@ -1,8 +1,0 @@
-test_server: waitfordb
-	docker/test-server.sh
-
-shell:
-	/bin/sh
-
-waitfordb:
-	docker/waitfordb.sh
