@@ -4,9 +4,9 @@ echo "Connecting to ${DB_HOST}:${DB_PORT}"
 
 while true; do
     nc -z ${DB_HOST} ${DB_PORT} && break
-    echo "Unable to connect to ${DB_HOST}:${DB_PORT}; sleeping"
+    echo "Waiting for ${DB_HOST}:${DB_PORT} ..."
     sleep 1
 done
 
-echo "Waiting for database to settle"
+echo "Waiting for database to settle ..."
 sleep 3
